# ctek-py

./: .devcontainer.json  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/ctek/: nanogrid_air.py
src/ctek/nanogrid_air/: nanogrid_air.py  types.py
src/example_module/: example.py
tests/: manual_test_ng_air.py  test_example.py  test_manual_ng_air.py  test_nanogrid_air.py
