
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "example-module"
description = ""
authors = [{ name = "Carl Westman", email = "carl.westman91@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
# dependencies = ["package1", "package2"]
dynamic = ["version"]

[project.scripts]
example-module = "example_module:main"

[project.urls]
Repository = "https://github.com/Wesztman/get-py-deps"

[project.optional-dependencies]
lint = ["ruff~=0.3.7", "mypy~=1.9.0", "pyright~=1.1.352"]
test = [
    "pytest~=8.1.1",
    "pytest-cov~=5.0.0",
    "coverage[toml]~=7.4.4",
    "pytest-mock~=3.14.0",
    "pytest-sugar~=1.0.0",
]
dev = ["pre-commit~=3.5.0", "example-module[lint]", "example-module[test]"]

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pdm.scripts]
# Misc
_add-title.shell = "echo '\\e[35m##################################### {args} #####################################\\e[0m'"
_print-python-version.shell = "python --version"
_print-success.shell = "echo '\n\\e[32m{args}\\e[0m'"
# Runs before each pdm run command
pre_run = { composite = [
    "_add-title 'Checking dependencies'",
    "pdm sync -G dev",
    "_print-python-version",
], help = "Check and install dependencies, run automatically before each `pdm run`" }
# Test
test = { composite = [
    "_add-title 'Running Pytest'",
    "pytest {args:tests/ --cov src/example_module --cov-report term --cov-report html}",
], help = "Run pytest with coverage report" }
# Linting
_precommit = { shell = "pre-commit run --all-files" } # incl. ruff lint, ruff format, and lock file check
_mypy-typecheck = { shell = "mypy ." }
_pyright-typecheck = { shell = "pyright ." }
lint = { composite = [
    "_add-title 'Running linting'",
    "_precommit",
    "_mypy-typecheck",
    "_pyright-typecheck",
], help = "Run linting incl. pre-commit, typechecks, ruff format, lint and lock file check" }
# Build
build = { composite = [
    "_add-title 'Building package'",
    "pdm build",
], help = "Build the package in the dist/ directory" }
# Run all checks
all = { composite = [
    "lint",
    "test",
    "build",
    "_print-success '🎉🎉 All checks passed 🎉🎉'",
], help = "Run all tests and checks, as well as building the package" }

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001", # Requires __init__.py but docs folder is not a package.
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = [".venv/", "dist/", "tests/"]

[tool.coverage.run]
omit = ["*tests*"]
